data/derived/comb/progs/unify/prog4349.ml.out
Characters 68-69:
  Printf.sprintf"%d" e
                     ^
Error: This expression has type expr but an expression was expected of type
         int
